fix page title alignment

--- a/sites/all/themes/earth/css/pages.css
+++ b/sites/all/themes/earth/css/pages.css
@@ -242,9 +242,10 @@ body.page-node .panel-col-first .inside {
 h1.title {
   /* The title of the page */
   margin: 0.23em 0;
+  text-align: center;
 }
 
-/* line 263, ../sass/pages.scss */
+/* line 264, ../sass/pages.scss */
 h2.node-title,
 h2.block-title,
 h2.pane-title {
@@ -252,7 +253,7 @@ h2.pane-title {
   margin: 0.07em 0;
 }
 
-/* line 269, ../sass/pages.scss */
+/* line 270, ../sass/pages.scss */
 h2.title,
 h2.comment-form,
 h3.title {
@@ -260,37 +261,37 @@ h3.title {
   margin: 0;
 }
 
-/* line 273, ../sass/pages.scss */
+/* line 274, ../sass/pages.scss */
 tr.even {
   /* Some tables have rows marked even or odd. */
   /* background-color: #eee; */
   /* Drupal core uses a #eee background */
 }
 
-/* line 277, ../sass/pages.scss */
+/* line 278, ../sass/pages.scss */
 tr.odd {
   /* background-color: #eee; */
   /* Drupal core uses a #eee background */
 }
 
-/* line 281, ../sass/pages.scss */
+/* line 282, ../sass/pages.scss */
 div.messages {
   /* Important messages (status, warning, and error) for the user. See also the declarations in messages.css. */
   margin: 1.5em 0;
   /* Drupal core uses "6px 0" margin */
 }
-/* line 284, ../sass/pages.scss */
+/* line 285, ../sass/pages.scss */
 div.messages ul {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-/* line 290, ../sass/pages.scss */
+/* line 291, ../sass/pages.scss */
 div.status {
   /* Normal priority messages */
 }
 
-/* line 294, ../sass/pages.scss */
+/* line 295, ../sass/pages.scss */
 div.warning,
 tr.warning {
   /* Medium priority messages */
@@ -298,53 +299,53 @@ tr.warning {
   /* Drupal core uses: 1px solid #f0c020 */
 }
 
-/* line 299, ../sass/pages.scss */
+/* line 300, ../sass/pages.scss */
 div.error,
 tr.error {
   /* High priority messages. See also the .error declaration below. */
 }
 
-/* line 302, ../sass/pages.scss */
+/* line 303, ../sass/pages.scss */
 .error {
   /* Errors that are separate from div.messages status messages. */
   /* color: #e55; */
   /* Drupal core uses a #e55 background */
 }
 
-/* line 306, ../sass/pages.scss */
+/* line 307, ../sass/pages.scss */
 .warning {
   /* Warnings that are separate from div.messages status messages. */
   /* color: #e09010; */
   /* Drupal core uses a #e09010 background */
 }
 
-/* line 310, ../sass/pages.scss */
+/* line 311, ../sass/pages.scss */
 .tabs {
   /* See also the tabs.css file. */
 }
 
-/* line 313, ../sass/pages.scss */
+/* line 314, ../sass/pages.scss */
 .region-help {
   /* Help text on a page */
 }
 
-/* line 316, ../sass/pages.scss */
+/* line 317, ../sass/pages.scss */
 .more-help-link {
   /* Link to more help */
 }
 
-/* line 319, ../sass/pages.scss */
+/* line 320, ../sass/pages.scss */
 .region-content {
   /* Wrapper for the actual page content */
 }
 
-/* line 322, ../sass/pages.scss */
+/* line 323, ../sass/pages.scss */
 ul.inline {
   /* List of links generated by theme_links() */
   display: inline;
   padding: 0;
 }
-/* line 326, ../sass/pages.scss */
+/* line 327, ../sass/pages.scss */
 ul.inline li {
   display: inline;
   list-style-type: none;
@@ -352,30 +353,30 @@ ul.inline li {
   /* LTR */
 }
 
-/* line 332, ../sass/pages.scss */
+/* line 333, ../sass/pages.scss */
 span.field-label {
   /* The inline field label used by the Fences module */
   padding: 0 1em 0 0;
   /* LTR */
 }
 
-/* line 336, ../sass/pages.scss */
+/* line 337, ../sass/pages.scss */
 .item-list .pager {
   /* A list of page numbers when more than 1 page of content is available */
   padding: 0;
 }
-/* line 339, ../sass/pages.scss */
+/* line 340, ../sass/pages.scss */
 .item-list .pager li {
   /* Each page number in the pager list */
   padding: 0 0.5em;
 }
 
-/* line 344, ../sass/pages.scss */
+/* line 345, ../sass/pages.scss */
 .feed-icon {
   /* The link to the RSS or Atom feed for the current list of content */
 }
 
-/* line 347, ../sass/pages.scss */
+/* line 348, ../sass/pages.scss */
 .more-link {
   /* Aggregator, blog, and forum more link */
 }
@@ -395,7 +396,7 @@ span.field-label {
 /*
  * Footer
  */
-/* line 377, ../sass/pages.scss */
+/* line 378, ../sass/pages.scss */
 #footer-left-right {
   padding: 7px 0;
 }
@@ -403,7 +404,7 @@ span.field-label {
 /*
  * Page bottom
  */
-/* line 385, ../sass/pages.scss */
+/* line 386, ../sass/pages.scss */
 .region-bottom {
   /* Wrapper for any blocks placed in the page bottom region */
 }
